Fix alignment of info column to grid

--- a/public/css/screen.styl
+++ b/public/css/screen.styl
@@ -20,19 +20,19 @@ a
   font-weight bold
 .countdown
   font-size: 80px
-  line-height: 80px
+  line-height: 75px
 .huge
   font-size 60px
-  line-height 60px
+  line-height 65px
 .larger
   font-size 36px
-  line-height 50px
+  line-height 35px
 .large
   font-size 24px
-  line-height 26px
+  line-height 25px
 .medium
   font-size 16px
-  line-height 16px
+  line-height 20px
 
 // layout
 .center
